trying fix deployement

--- a/deployement/templates/index.html
+++ b/deployement/templates/index.html
@@ -21,8 +21,8 @@
         </form>
     </div>
     <div>
-        {% if predictions %}
-        {% if predictions == 1 %}
+        {% if prediction %}
+        {% if prediction == 1 %}
         <h2 style="color: red">Spam</h2>
         {% else %}
         <h2 style="color: green">Not Spam</h2>
