--- a/deployement/templates/index.html
+++ b/deployement/templates/index.html
@@ -11,7 +11,7 @@
     <h1>Email Spam Classifier</h1>
     <div>
         <form method="post" action="/predict">
-            <textarea rows="12" cols="60" name="content" placeholder="Type or paste your email here" autocomplete="off">{{email_text}}</textarea>
+            <textarea rows="12" cols="60" name="email_content" placeholder="Type or paste your email here" autocomplete="off">{{email_text}}</textarea>
             <div>
                 <button>
                     Submit
